namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: srjm
  name: qrcode-system
