deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: srjm
  name: srjm-qrcode
  namespace: qrcode-system
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: srjm
  template:
    metadata:
      labels:
        app: srjm
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
    spec:
      containers:
      - image: srjm2024/gerador-qrcode-srjm:latest-2.1.1
        imagePullPolicy: Always
        name: srjm-qrcode
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 300m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet: 
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 5
          failureThreshold: 3
