service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: srjm
  name: srjm-qrcode
  namespace: qrcode-system
spec:
  selector:
    app: srjm
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  type: ClusterIP
