http-route-ArgoCD.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: argocd-http

    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: argocd-https

  hostnames:
    - argocd.geradorqrcode-srjm.uk

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
