ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: srjm
  name: srjm-ingress
  namespace: qrcode-system
  annotations:
    # nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/rate-limit: "10"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/auth-type: "basic"
    # nginx.ingress.kubernetes.io/auth-secret: "qrcode-senhas"
    # nginx.ingress.kubernetes.io/auth-realm: "Autenticacao Necessaria"

    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "srjm-qrcode"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    #canary ingress
    # nginx.ingress.kubernetes.io/canary: "true"
    # nginx.ingress.kubernetes.io/canary-weight: "70"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - geradorqrcode-srjm.uk
    secretName:  geradorqrcode-srjm.uk-tls
  rules:
  - host: geradorqrcode-srjm.uk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: srjm-qrcode
            port: 
              number: 3000
